PROJECT(DataManager)

FIND_PACKAGE(vtkINRIA3D REQUIRED)
INCLUDE(${vtkINRIA3D_USE_FILE})

IF(APPLE)
SET(GUI_EXECUTABLE MACOSX_BUNDLE)
ENDIF(APPLE)

ADD_EXECUTABLE(DataManager ${GUI_EXECUTABLE}
DataManager.cxx
)

TARGET_LINK_LIBRARIES(DataManager
vtkDataManagement
vtkRenderingAddOn
vtkVisuManagement
vtkRendering
vtkIO
)



