PROJECT(SHVisu)

FIND_PACKAGE(vtkINRIA3D REQUIRED)
INCLUDE(${vtkINRIA3D_USE_FILE})

IF(APPLE)
SET(GUI_EXECUTABLE MACOSX_BUNDLE)
ENDIF(APPLE)

ADD_EXECUTABLE(SHVisu ${GUI_EXECUTABLE}
#SHVisuTest.cxx
SHManager.cxx
)

TARGET_LINK_LIBRARIES(SHVisu
vtkVisuManagement
vtkRenderingAddOn
)

#vtkVisuManagement
#vtkRendering
#vtkIO
